--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "graphql-react-event-booking",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js --exec babel-node"
+    "dev": "nodemon app.js --exec babel-node",
+    "lint": "eslint ./"
   },
   "repository": "git@github.com:echelonka/graphql-react-event-booking.git",
   "author": "marinaskripnik97@gmail.com <marinaskripnik97@gmail.com>",
@@ -22,6 +23,7 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.2.1",
     "nodemon": "^1.19.1"
   }
 }
